# Hdc10082Mqtt

./: Cargo.toml  Config_Hdc10082Mqtt.json  Cross.toml  Dockerfile  README.md
.github/workflows/: main.yml  rust.yml
config/: Hdc10082Mqtt.json
src/: config.rs  main.rs
