[package]
name = "Hdc10082Mqtt"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i2cdev = "0.5.1"
serde_json = "1.0.89"
serde = { version = "1.0.149", features = ["derive"]}
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust.git", branch = "master" }
