[package]
name = "Hdc10082Mqtt"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i2cdev = "0.5.1"
rumqttc = "0.20.0"
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"]}
tokio = "1.27.0"
